# pathracer-wgpu

./: Cargo.toml  README.md  index.html
src/: camera.rs  gpu_buffer.rs  lib.rs  main.rs  render_context.rs  shader.wgsl  state.rs  vertex.rs
src/object/: aabb.rs  bvh.rs  mesh.rs  mod.rs  sphere.rs
src/scene/: aabb.rs  camera.rs  material.rs  mod.rs
src/shader/: raytracing.wgsl
src/utils/: gpu_buffer.rs  mod.rs
