[package]
name = "pathracer-wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "pathracer-wgpu"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
cfg-if = "1"
# not going latest version cause breaking changes 
winit = { version = "0.29", features = ["rwh_05"] }
env_logger = "0.11.6"
log = "0.4"
wgpu = "23.0.1"
pollster = "0.4.0"
bytemuck = { version = "1.16", features = [ "derive" ] }
nalgebra-glm = { version = "0.19.0", features = ["convert-bytemuck"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "23.0.1", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}